# RG-2019-Lab3

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  spline.txt
shaders/: line.frag.glsl  line.frag.spv  line.vert.glsl  line.vert.spv  mass.comp.glsl  mass.comp.spv  spring.comp.glsl  spring.comp.spv  topo.frag.glsl  topo.frag.spv  topo.vert.glsl  topo.vert.spv
src/: Game.cpp  Game.h  data.h  main.cpp  stb_image.h  utils.cpp  utils.h
src/curves/: Bspline.cpp  Bspline.h  CosLine.cpp  CosLine.h
src/graphics/: BufferAllocation.cpp  BufferAllocation.h  Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  MemoryAllocator.cpp  Mesh.cpp  Mesh.h  RenderComponent.cpp  RenderComponent.h  Vulkan.cpp  Vulkan.h
src/interfaces/: IObjectModifier.h  ITimeBound.h
src/particlesystem/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
src/physics/: CollisionComponent.cpp  CollisionComponent.h  CollisionSphere.cpp  CollisionSphere.h  ICollisionObject.h  IPhysicsComponent.cpp  IPhysicsComponent.h  PhysicsEngine.cpp  PhysicsEngine.h  StandardPhysicsComponent.cpp  StandardPhysicsComponent.h
src/player/: Player.cpp  Player.h  PlayerMovement.cpp  PlayerMovement.h
src/springsystem/: MassPoint.cpp  MassPoint.h  Spring.cpp  Spring.h  SpringSystem.cpp  SpringSystem.h
src/storage/: Storage.cpp  Storage.h
src/world/: World.cpp  World.h  WorldObject.cpp  WorldObject.h
